<resources>
    <string name="app_name">Autism_Project</string>
    <string name="play">Play</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="math">Math</string>
    <string name="picture_puzzle">picture puzzle</string>
    <string name="numbers">Numbers</string>
    <string name="letters">Letters</string>
    <string name="set_breakfast">set breakfast</string>
    <string name="did_you_set_the_alarm">DId you set the alarm?</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_off">alarm off</string>
</resources>
