<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.asus.autism_project.PlaySelect">

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="120dp"
        android:onClick="onClick"
        android:text="@string/letters"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        android:text="@string/numbers"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        android:text="@string/math"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="38dp"
        android:text="@string/picture_puzzle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>
