<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.autism_project.Breakfast">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/turnOn"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginBottom="73dp"
        android:layout_marginEnd="127dp"
        android:layout_marginStart="32dp"
        android:onClick="setOnClickAlarmOnListener"
        android:text="@string/alarm_on"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/turnOff"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/turnOff"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:onClick="setOnClickAlarmOffListener"
        android:text="@string/alarm_off"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/turnOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnOn"
        app:layout_constraintTop_toTopOf="@+id/turnOn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/did_you_set_the_alarm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnOn" />
</android.support.constraint.ConstraintLayout>
